force-app/main/default/objects/copado__Compliance_Finding__c/fields/copado__Compliance_Rule__c.field-meta.xml
<CustomField>
    <fullName>copado__Compliance_Rule__c</fullName>
    <label>Compliance Rule</label>
    <referenceTo>copado__Compliance_Rule__c</referenceTo>
    <relationshipLabel>Compliance Findings</relationshipLabel>
    <relationshipName>Compliance_Incidences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>