force-app/main/default/objects/copado__Compliance_Finding__c/fields/copado__Compliance_Scan_Result__c.field-meta.xml
<CustomField>
    <fullName>copado__Compliance_Scan_Result__c</fullName>
    <label>Compliance Scan Result</label>
    <referenceTo>copado__Compliance_Scan_Result__c</referenceTo>
    <relationshipLabel>Compliance Findings</relationshipLabel>
    <relationshipName>Compliance_Findings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>